// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SendReviewModal > should render input in fiat correctly 1`] = `
<div
  class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[16px] w-[100%]"
  data-testid="send-review-modal"
>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[24px] px-[12px]"
  >
    <div
      class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 grow gap-[4px]"
      >
        <h2
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[36px] [line-height:40px] [font-weight:485] [color:var(--stext-neutral1)]"
        >
          $1,000.00
        </h2>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
        >
          100.00 DAI
        </span>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 h-[36px]"
      >
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center top-[0px] left-[0px]"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 relative"
          >
            <div
              class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[36px] h-[36px] relative [pointer-events:auto]"
              data-testid="token-logo"
            >
              <div
                class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
                style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
              />
              <div
                data-testid="img-token-image"
                style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
              >
                <img
                  height="36"
                  src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                  style="object-fit: cover; width: 36px; height: 36px; border-radius: 36px; z-index: 1;"
                  width="36"
                />
              </div>
              <div
                class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
                style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
              >
                <div
                  class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                  data-testid="network-logo-1"
                  style="--c-z: 10; width: 17px; height: 17px; border-radius: 5.1px; border-width: 1.5px;"
                >
                  <div
                    class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                    style="object-fit: contain; width: 15px; height: 15px;"
                  >
                    <div
                      class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                      style="background-image: url(ethereum-logo.png);"
                    />
                    <img
                      alt=""
                      class="css-accessibilityImage-9pa8cd"
                      draggable="false"
                      src="ethereum-logo.png"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 grow gap-[4px]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
        >
          To
        </span>
        <h2
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[36px] [line-height:40px] [font-weight:485] [color:var(--stext-neutral1)]"
        >
          <div
            class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[4px]"
          >
            <div
              class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 grow-[0] w-[100%] overflow-hidden"
            >
              <div
                class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row gap-[4px] h-[0px] overflow-hidden"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 grow-[1] overflow-hidden"
                />
              </div>
              <div
                class="flex basis-auto box-border relative min-h-[0px] flex-row shrink items-center gap-[4px] w-[100%] min-w-[0px] overflow-hidden"
              >
                <span
                  class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [font-weight:485] [line-height:var(--c-lh)] [color:var(--stext-neutral1)]"
                  style="--c-lh: 44px; font-size: 24px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden;"
                >
                  hayden.eth
                </span>
              </div>
            </div>
          </div>
        </h2>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
        >
          0x9984...9103
        </span>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 h-[36px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[36px] h-[36px] border-transparent border-[0px] rounded-[999999px] relative"
          data-testid="account-icon"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] grow shrink items-center justify-center opacity-[0] [transition:var(--c-t)]"
            style="--c-t: opacity 100ms cubic-bezier(0.17, 0.67, 0.45, 1);"
          >
            <span
              data-testid="unicon"
            >
              🔵
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="display: flex; align-items: stretch; flex-direction: column; flex-basis: auto; box-sizing: border-box; position: relative; min-height: 0; min-width: 0; flex-grow: 1; flex-shrink: 1; border-top-style: solid; border-right-style: solid; border-bottom-style: solid; border-left-style: solid; border-top-width: 0; border-right-width: 0; border-left-width: 0; border-top-color: rgba(19, 19, 19, 0.08); border-right-color: rgba(19, 19, 19, 0.08); border-bottom-color: rgba(19, 19, 19, 0.08); border-left-color: rgba(19, 19, 19, 0.08); height: 0px; max-height: 0; border-bottom-width: 1px;"
  />
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between px-[12px] w-[100%]"
  >
    <span
      class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
    >
      Network cost
    </span>
    <div
      class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[4px] w-[min-content]"
    >
      <img
        alt="Ethereum logo"
        aria-labelledby="titleID"
        height="16px"
        src="ethereum-logo.png"
        style="border-radius: 4px;"
        width="16px"
      />
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)]"
      >
        -
      </span>
    </div>
  </div>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 self-stretch gap-[16px]"
  >
    <div
      class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row"
    >
      <button
        class="group/sbtn relative box-border flex min-h-0 min-w-0 cursor-pointer items-center justify-center border border-solid border-transparent select-none [transition:transform_100ms_cubic-bezier(0.17,0.67,0.45,1),filter_100ms_cubic-bezier(0.17,0.67,0.45,1)] active:scale-[0.98] focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-solid gap-3 rounded-20 px-5 py-4 flex-row flex-1 basis-0 self-stretch focus-visible:scale-x-[0.98] focus-visible:scale-y-[0.905] bg-accent1 hover:bg-accent1-hovered active:bg-accent1-hovered focus-visible:bg-accent1-hovered focus-visible:outline-accent1-hovered"
        dd-action-name="Confirm send"
        type="button"
      >
        <span
          class="text-center font-medium [font-family:var(--sbtn-font-button)] [transition:color_100ms_cubic-bezier(0.17,0.67,0.45,1)] text-[18px] leading-[20.7px] text-white max-w-full overflow-hidden text-ellipsis whitespace-nowrap"
        >
          Confirm send
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`SendReviewModal > should render input in token amount correctly 1`] = `
<div
  class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[16px] w-[100%]"
  data-testid="send-review-modal"
>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 gap-[24px] px-[12px]"
  >
    <div
      class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 grow gap-[4px]"
      >
        <h2
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[36px] [line-height:40px] [font-weight:485] [color:var(--stext-neutral1)]"
        >
          1.00 DAI
        </h2>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
        >
          $100.00
        </span>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 h-[36px]"
      >
        <div
          class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center top-[0px] left-[0px]"
        >
          <div
            class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 relative"
          >
            <div
              class="flex flex-col basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 items-center justify-center w-[36px] h-[36px] relative [pointer-events:auto]"
              data-testid="token-logo"
            >
              <div
                class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[var(--c-w)] h-[var(--c-h)] bg-[color:var(--c-bg)] rounded-[999999px] opacity-[0] absolute top-[var(--c-top)] left-[var(--c-left)] z-[var(--c-z)]"
                style="--c-w: 96%; --c-h: 96%; --c-bg: #FFFFFF; --c-top: 2%; --c-left: 2%; --c-z: 0;"
              />
              <div
                data-testid="img-token-image"
                style="box-sizing: border-box; display: flex; flex-direction: column; flex-shrink: 0; min-width: 0;"
              >
                <img
                  height="36"
                  src="https://raw.githubusercontent.com/Uniswap/assets/master/blockchains/ethereum/assets/0x6B175474E89094C44Da98b954EedeAC495271d0F/logo.png"
                  style="object-fit: cover; width: 36px; height: 36px; border-radius: 36px; z-index: 1;"
                  width="36"
                />
              </div>
              <div
                class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 absolute right-[var(--c-right)] bottom-[var(--c-bottom)] z-[var(--c-z)]"
                style="--c-right: -3px; --c-bottom: -2px; --c-z: 10;"
              >
                <div
                  class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 items-center justify-center overflow-hidden z-[var(--c-z)]"
                  data-testid="network-logo-1"
                  style="--c-z: 10; width: 17px; height: 17px; border-radius: 5.1px; border-width: 1.5px;"
                >
                  <div
                    class="css-view-175oi2r r-flexBasis-1mlwlqe r-overflow-1udh08x r-zIndex-417010"
                    style="object-fit: contain; width: 15px; height: 15px;"
                  >
                    <div
                      class="css-view-175oi2r r-backgroundColor-1niwhzg r-backgroundPosition-vvn4in r-backgroundRepeat-u6sd8q r-bottom-1p0dtai r-height-1pi2tsx r-left-1d2f490 r-position-u8s1d r-right-zchlnj r-top-ipm5af r-width-13qz1uu r-zIndex-1wyyakw r-backgroundSize-4gszlv"
                      style="background-image: url(ethereum-logo.png);"
                    />
                    <img
                      alt=""
                      class="css-accessibilityImage-9pa8cd"
                      draggable="false"
                      src="ethereum-logo.png"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between"
    >
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 grow gap-[4px]"
      >
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
        >
          To
        </span>
        <h2
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[36px] [line-height:40px] [font-weight:485] [color:var(--stext-neutral1)]"
        >
          <div
            class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[4px]"
          >
            <div
              class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 grow-[0] w-[100%] overflow-hidden"
            >
              <div
                class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row gap-[4px] h-[0px] overflow-hidden"
              >
                <div
                  class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 grow-[1] overflow-hidden"
                />
              </div>
              <div
                class="flex basis-auto box-border relative min-h-[0px] flex-row shrink items-center gap-[4px] w-[100%] min-w-[0px] overflow-hidden"
              >
                <span
                  class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[16px] [font-weight:485] [line-height:var(--c-lh)] [color:var(--stext-neutral1)]"
                  style="--c-lh: 44px; font-size: 24px; white-space: nowrap; text-overflow: ellipsis; overflow: hidden;"
                >
                  hayden.eth
                </span>
              </div>
            </div>
          </div>
        </h2>
        <span
          class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
        >
          0x9984...9103
        </span>
      </div>
      <div
        class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 h-[36px]"
      >
        <div
          class="flex flex-col items-stretch basis-auto box-border min-h-[0px] min-w-[0px] shrink-0 w-[36px] h-[36px] border-transparent border-[0px] rounded-[999999px] relative"
          data-testid="account-icon"
        >
          <div
            class="flex flex-col basis-auto box-border relative min-h-[0px] min-w-[0px] grow shrink items-center justify-center opacity-[0] [transition:var(--c-t)]"
            style="--c-t: opacity 100ms cubic-bezier(0.17, 0.67, 0.45, 1);"
          >
            <span
              data-testid="unicon"
            >
              🔵
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    style="display: flex; align-items: stretch; flex-direction: column; flex-basis: auto; box-sizing: border-box; position: relative; min-height: 0; min-width: 0; flex-grow: 1; flex-shrink: 1; border-top-style: solid; border-right-style: solid; border-bottom-style: solid; border-left-style: solid; border-top-width: 0; border-right-width: 0; border-left-width: 0; border-top-color: rgba(19, 19, 19, 0.08); border-right-color: rgba(19, 19, 19, 0.08); border-bottom-color: rgba(19, 19, 19, 0.08); border-left-color: rgba(19, 19, 19, 0.08); height: 0px; max-height: 0; border-bottom-width: 1px;"
  />
  <div
    class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center justify-between px-[12px] w-[100%]"
  >
    <span
      class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral2)]"
    >
      Network cost
    </span>
    <div
      class="flex basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row items-center gap-[4px] w-[min-content]"
    >
      <img
        alt="Ethereum logo"
        aria-labelledby="titleID"
        height="16px"
        src="ethereum-logo.png"
        style="border-radius: 4px;"
        width="16px"
      />
      <span
        class="[display:inline] box-border m-0 [word-wrap:break-word] whitespace-pre-wrap [font-family:var(--stext-font-book)] text-[14px] [line-height:18px] [font-weight:485] [color:var(--stext-neutral1)]"
      >
        -
      </span>
    </div>
  </div>
  <div
    class="flex flex-col items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 self-stretch gap-[16px]"
  >
    <div
      class="flex items-stretch basis-auto box-border relative min-h-[0px] min-w-[0px] shrink-0 flex-row"
    >
      <button
        class="group/sbtn relative box-border flex min-h-0 min-w-0 cursor-pointer items-center justify-center border border-solid border-transparent select-none [transition:transform_100ms_cubic-bezier(0.17,0.67,0.45,1),filter_100ms_cubic-bezier(0.17,0.67,0.45,1)] active:scale-[0.98] focus-visible:outline-1 focus-visible:outline-offset-2 focus-visible:outline-solid gap-3 rounded-20 px-5 py-4 flex-row flex-1 basis-0 self-stretch focus-visible:scale-x-[0.98] focus-visible:scale-y-[0.905] bg-accent1 hover:bg-accent1-hovered active:bg-accent1-hovered focus-visible:bg-accent1-hovered focus-visible:outline-accent1-hovered"
        dd-action-name="Confirm send"
        type="button"
      >
        <span
          class="text-center font-medium [font-family:var(--sbtn-font-button)] [transition:color_100ms_cubic-bezier(0.17,0.67,0.45,1)] text-[18px] leading-[20.7px] text-white max-w-full overflow-hidden text-ellipsis whitespace-nowrap"
        >
          Confirm send
        </span>
      </button>
    </div>
  </div>
</div>
`;
